--- a/style.css
+++ b/style.css
@@ -26,13 +26,15 @@ canvas {
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 50px;
+    font-size: clamp(30px, 8vw, 50px);
     font-weight: bold;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: rgba(255, 255, 255, 0.8);
     text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8);
     text-align: center;
     white-space: nowrap;
+    max-width: 90%;
+    overflow: hidden;
   
 }
 .subtitle {
