--- a/style.css
+++ b/style.css
@@ -21,22 +21,20 @@ canvas {
     pointer-events: none;
   }
 
-  .logo{
+  .logo {
     position: absolute;
-    top: 30%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: clamp(30px, 8vw, 50px);
+    font-size: clamp(30px, 6vw, 60px); /* Responsive font size */
     font-weight: bold;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: rgba(255, 255, 255, 0.8);
     text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8);
     text-align: center;
-    white-space: nowrap;
-    max-width: 90%;
-    overflow: hidden;
-  
+    white-space: nowrap; /* Prevents text from breaking into multiple lines */
 }
+
 .subtitle {
   position: absolute;
   top: 45%; /* Adjust this so it appears below the title */
