--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ canvas {
     text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8);
     text-align: center;
     white-space: nowrap; /* Prevents text from breaking into multiple lines */
+    width: max-content;
+    display: inline-block;
 }
 
 .subtitle {
