--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ padding: 0;
 }
 
 body {
-    background:  linear-gradient(to bottom, #080614 0%,#0d0920 25%,#161330 50%,#181631 75%,#0d0d1f 100%);
+    background:  linear-gradient(to bottom, #080614 0%,#0d0920 25%,#161330 50%,#161431 75%,#0d0d1f 100%);
     /* its been 4 days since I started learning this AND IT TOOK ME SO LONG JUST TO SAVE A GRADIENT */
     background-repeat:no-repeat;
     background-attachment: fixed;
@@ -26,11 +26,11 @@ canvas {
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: clamp(30px, 6vw, 60px); /* Responsive font size */
+    font-size: clamp(30px, 6vw, 50px); /* Responsive font size */
     font-weight: bold;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgba(255, 255, 255, 0.8);
-    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8);
+    color: #513A5E;
+    /* text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8); */
     text-align: center;
     white-space: nowrap; /* Prevents text from breaking into multiple lines */
     width: max-content;
@@ -80,5 +80,41 @@ canvas {
       font-size: 20px; /* Smaller for mobile */
       top: 15%;
     }
+  }
+
+  #musicToggle {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background: rgba(231, 152, 152, 0.2);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    backdrop-filter: blur(5px);
+  }
+  
+  #musicToggle:hover {
+    background: rgba(255, 255, 255, 0.4);
+  }
+  #nextPageBtn {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+    border: 1px solid white;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: background 0.3s ease-in-out;
+  }
+
+  #nextPageBtn:hover {
+    background-color: rgba(255, 255, 255, 0.5);
   }
   
